@startuml

title __VIEW's Class Diagram__\n

  namespace org.example.Tomorroio {
    namespace view {
      class org.example.Tomorroio.view.WeatherChartView {
          - cloudCoverDataset : XYSeriesCollection
          - humidityDataset : XYSeriesCollection
          - pressureDataset : XYSeriesCollection
          - temperatureDataset : XYSeriesCollection
          - windGustDataset : XYSeriesCollection
          - windSpeedDataset : XYSeriesCollection
          + WeatherChartView()
          + updateChart()
          - addChartPanel()
          - convertToXYSeriesCollection()
          - createAndShowUI()
      }
    }
  }
  

  namespace org.example.Tomorroio {
    namespace view {
      interface org.example.Tomorroio.view.WeatherView {
          {abstract} + updateChart()
      }
    }
  }
  

  org.example.Tomorroio.view.WeatherChartView .up.|> org.example.Tomorroio.view.WeatherView
  org.example.Tomorroio.view.WeatherChartView -up-|> javax.swing.JFrame
  org.example.Tomorroio.view.WeatherChartView o-- org.example.Tomorroio.view.strategy.ChartStrategy : chartStrategy
  org.example.Tomorroio.view.WeatherChartView o-- org.example.Tomorroio.model.WeatherData : weatherData


@enduml
